chore: get rid of FindBugs bugs